--- a/Android_Project/Milestone_2/Globetrotter/app/src/main/res/values/strings.xml
+++ b/Android_Project/Milestone_2/Globetrotter/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="newplaceimage">newPlaceImage</string>
     <string name="camerabutton">cameraButton</string>
     <string name="librarybutton">libraryButton</string>
+    <string name="placethumbnailimage">placeThumbnailImage</string>
+    <string name="textview">TextView</string>
+    <string name="cellarrow">cellArrow</string>
 </resources>
