Can view previosuly stored data or enter new data and save

--- a/Android_Project/Milestone_3/Globetrotter/app/src/main/res/values/strings.xml
+++ b/Android_Project/Milestone_3/Globetrotter/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="cellarrow">cellArrow</string>
     <string name="your_image_will_be_displayed_here">Your image will be displayed here</string>
     <string name="save"><b>Save</b></string>
+    <string name="add">Add</string>
 </resources>
