--- a/Android_Project/Milestone_3/Globetrotter/app/src/main/res/values/strings.xml
+++ b/Android_Project/Milestone_3/Globetrotter/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="your_image_will_be_displayed_here">Your image will be displayed here</string>
     <string name="save"><b>Save</b></string>
     <string name="add">Add</string>
+    <string name="deletebutton">deleteButton</string>
 </resources>
